[project]
name = "repl-nix-simulations"
version = "0.1.0"
description = "A Mesa-based robot swarm simulation modeling autonomous robots that complete tasks while managing battery levels. Features dynamic task allocation, battery management, and real-time visualization of swarm efficiency."
requires-python = ">=3.11"
dependencies = [
    "mesa>=3.1.0",
    "numpy>=2.2.0",
]
